<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nav_graph"
        app:startDestination="@id/homeFragment">

    <fragment
            android:id="@+id/homeFragment"
            android:name="com.yandex.retailmedia.sample.presentation.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/screen_products" />

    <fragment
            android:id="@+id/categoriesFragment"
            android:name="com.yandex.retailmedia.sample.presentation.categories.CategoriesFragment"
            android:label="@string/title_categories"
            tools:layout="@layout/screen_categories" />

    <fragment
            android:id="@+id/cartFragment"
            android:name="com.yandex.retailmedia.sample.presentation.cart.CartFragment"
            android:label="@string/title_cart"
            tools:layout="@layout/screen_cart" />

    <fragment
            android:id="@+id/productListFragment"
            android:name="com.yandex.retailmedia.sample.presentation.productlist.ProductListFragment"
            tools:layout="@layout/screen_products">
        <argument
                android:name="categoryId"
                app:argType="string" />
        <argument
                android:name="categoryName"
                android:defaultValue="@null"
                app:argType="string"
                app:nullable="true" />
    </fragment>

    <fragment
            android:id="@+id/searchFragment"
            android:name="com.yandex.retailmedia.sample.presentation.search.SearchFragment"
            tools:layout="@layout/screen_search" />

</navigation>
